--- a/CODIGO/AsistenteIngesta/app/src/main/res/values/strings.xml
+++ b/CODIGO/AsistenteIngesta/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Asistente Ventilacion</string>
+    <string name="app_name">Asistente de Ingestas</string>
 </resources>
